force-app/main/default/objects/BPR_Session__c/BPR_Session__c.object-meta.xml
<CustomObject>
    <label>BPR Session</label>
    <nameField>
        <label>BPR Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BPR Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>