force-app/main/default/objects/BPR_Session__c/fields/BPR_Date__c.field-meta.xml
<CustomField>
    <fullName>BPR_Date__c</fullName>
    <label>BPR Date</label>
    <type>Date</type>
</CustomField>