force-app/main/default/objects/BPR_Session__c/fields/BPR_Notes__c.field-meta.xml
<CustomField>
    <fullName>BPR_Notes__c</fullName>
    <label>BPR Notes</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>