force-app/main/default/objects/BPR_Session__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>BPR Sessions</relationshipLabel>
    <relationshipName>BPR_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>