force-app/main/default/objects/BPR_Session__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Set the status to &apos;Cross Checked&apos; once each set of notes has been reviewed to make sure all related requirements have been entered.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Cross Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>