force-app/main/default/objects/BPR_Session__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Note Taker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BPR_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>